<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/genericPurple">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginScreen"
        android:textSize="20sp"
        android:textColor="@color/genericBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/genericBlue"
        android:orientation="vertical">

        <EditText
            android:id="@+id/loginBox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/genericPurple"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/loginUserHint"
            android:textColor="@color/genericElectric" />

        <EditText
            android:id="@+id/passwordBox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:backgroundTint="@color/genericPurple"
            android:ems="10"
            android:hint="@string/loginPassHint"
            android:inputType="textPassword"
            android:textColor="@color/genericElectric" />
        <TextView
            android:id="@+id/loginMsgText"
            android:text="@string/loginYesUser"
            android:layout_width="match_parent"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:layout_height="20dp"
            android:textColor="@color/genericPurple"/>
        <Button
            android:id="@+id/loginSubmitBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/genericPurple"
            android:text="@string/submitLogin"
            android:textColor="@color/genericBlue" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>